MSPSDS-805 fix: prevent display moving horizontally when showing/hiding scrollbar

--- a/web/app/assets/stylesheets/main.scss
+++ b/web/app/assets/stylesheets/main.scss
@@ -18,8 +18,19 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow-y: scroll;
+
+
+body {
+  // This block prevents content moving when hiding/displaying the scrollbar in the browser
+  @media screen and (min-width: 960px) {
+    header,
+    footer {
+      // Ensures that header and footer background colours fill width of screen
+      margin-left: -20px;
+    }
+    // Shifts content of body to right by width of scrollbar
+    padding-left: calc(100vw - 100%);
+  }
 }
 
 @media print {
